# selfix

./: .gitignore  README.md  pyproject.toml
configs/: pie_editing_selfix.yaml  pie_reconstruction_selfix.yaml
src/: edit.py  pie_bench_metrics.py  pie_bench_utils.py  run_pie_bench.py
src/flux/: __init__.py  __main__.py  sampling.py  util.py
src/flux/modules/: layers.py
